Added a class with prev and next buttons

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <img src="https://picsum.photos/id/20/500/300" alt="image">
             <img src="https://picsum.photos/id/25/500/300" alt="image">
         </div>
-
-        <i class="fa-solid fa-angles-left btn_prev"></i>
-        <i class="fa-solid fa-angles-right btn next"></i>
+        <div>
+            <i class="fa-solid fa-angles-left btn_prev"></i>
+            <i class="fa-solid fa-angles-right btn next"></i>
+        </div>
 </body>
